{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 34,
  "lineage": "0bba7c42-7a14-a9f4-9015-e1dc237e4ba8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "django_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b01a2ae47435cee8",
            "arn": "arn:aws:ec2:us-east-1:216989106152:elastic-ip/eipalloc-0b01a2ae47435cee8",
            "association_id": "eipassoc-09bca7320f3c05eb8",
            "domain": "vpc",
            "id": "eipalloc-0b01a2ae47435cee8",
            "instance": "i-0557d00d33055871d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0972e9e5267c42394",
            "private_dns": "ip-10-0-1-166.ec2.internal",
            "private_ip": "10.0.1.166",
            "public_dns": "ec2-3-229-29-144.compute-1.amazonaws.com",
            "public_ip": "3.229.29.144",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "django-eip"
            },
            "tags_all": {
              "Name": "django-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.django_server",
            "aws_key_pair.django_key",
            "aws_security_group.django_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "django_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:216989106152:instance/i-0557d00d33055871d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0557d00d33055871d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "django-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0972e9e5267c42394"
              }
            ],
            "primary_network_interface_id": "eni-0972e9e5267c42394",
            "private_dns": "ip-10-0-1-166.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.166",
            "public_dns": "ec2-3-229-29-144.compute-1.amazonaws.com",
            "public_ip": "3.229.29.144",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03a995be6e5b21d47",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0efdb5695d948ec17",
            "tags": {
              "Name": "django-server"
            },
            "tags_all": {
              "Name": "django-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05c3dfae874bf4980"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989106152",
            "id": "i-0557d00d33055871d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.django_key",
            "aws_security_group.django_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989106152:internet-gateway/igw-0ee3ff29e5b96bdf7",
            "id": "igw-0ee3ff29e5b96bdf7",
            "owner_id": "216989106152",
            "region": "us-east-1",
            "tags": {
              "Name": "django-igw"
            },
            "tags_all": {
              "Name": "django-igw"
            },
            "vpc_id": "vpc-00ce11abbda4332f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989106152:route-table/rtb-0896309a435189a9b",
            "id": "rtb-0896309a435189a9b",
            "owner_id": "216989106152",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee3ff29e5b96bdf7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "django-public-rt"
            },
            "tags_all": {
              "Name": "django-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ce11abbda4332f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989106152",
            "id": "rtb-0896309a435189a9b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087a9f8300c998747",
            "region": "us-east-1",
            "route_table_id": "rtb-0896309a435189a9b",
            "subnet_id": "subnet-0efdb5695d948ec17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "django_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989106152:security-group/sg-05c3dfae874bf4980",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c3dfae874bf4980",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "django-20251027025747835700000001",
            "name_prefix": "django-",
            "owner_id": "216989106152",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "django-sg"
            },
            "tags_all": {
              "Name": "django-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ce11abbda4332f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989106152",
            "id": "sg-05c3dfae874bf4980",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989106152:subnet/subnet-0efdb5695d948ec17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efdb5695d948ec17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "216989106152",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "django-public-subnet"
            },
            "tags_all": {
              "Name": "django-public-subnet"
            },
            "vpc_id": "vpc-00ce11abbda4332f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989106152",
            "id": "subnet-0efdb5695d948ec17",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989106152:vpc/vpc-00ce11abbda4332f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f0bfd213bc060ccf",
            "default_route_table_id": "rtb-04660799e3d4a98b1",
            "default_security_group_id": "sg-0860763134850a361",
            "dhcp_options_id": "dopt-08a646ecf748bb634",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00ce11abbda4332f5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04660799e3d4a98b1",
            "owner_id": "216989106152",
            "region": "us-east-1",
            "tags": {
              "Name": "django-vpc"
            },
            "tags_all": {
              "Name": "django-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}